--- a/3.html
+++ b/3.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLFE0LWEVR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLFE0LWEVR');
+</script>
     <title>SSEHYONG - JS script</title>
     <meta charset="utf-8">
 </head>
